# sa2pydantic

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: main.py  orm.py
src/sa2pydantic/: __init__.py  core.py  registry.py  type_util.py  types.py
tests/: conf.py  test_sa2pydantic.py
