[project]
name = "sa2pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabian Gruenwald", email = "fabiangruenwald1995@googlemail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "S101", "PT018", "PLR2004", "N806",
          "UP045", "FBT001", "FBT002", "PLR0913", "TC002"
        ]